Seemed to fix blurriness issue with larger font size...

--- a/app/less/custom.less
+++ b/app/less/custom.less
@@ -37,7 +37,7 @@ body {
 
     .caption {
       line-height: 1.25em;
-      font-size: 24px;
+      font-size: 32px;
       font-weight: bold;
       padding-bottom: .5em;
     }
